Translated two labels to dutch

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span ng-bind="task.title"></span>
                 </div>
                 <div class="item item-body">
-                    <strong>Title: <span ng-bind="task.title"></span></strong>
+                    <strong>Titel: <span ng-bind="task.title"></span></strong>
                     <p>
                         <span ng-bind="task.content"></span>
                     </p>
