--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 <form ng-submit="createTask()">
                     <div class="list list-inset">
                         <label class="item item-input">
-                            <input ng-model="task.title" type="text" placeholder="Task title">
+                            <input ng-model="task.title" type="text" placeholder="Geef de taak een naam">
                         </label>
                         <label class="item item-input">
-                            <textarea ng-model="task.content" rows="5" placeholder="Task content"></textarea>
+                            <textarea ng-model="task.content" rows="5" placeholder="Inhoud van de taak"></textarea>
                         </label>
                         <ul class="list">
                             <li class="item item-toggle">
@@ -100,6 +100,7 @@
                         </ul>
                         <button type="submit" class="button button-block button-positive">Maak taak</button>
                     </div>
+                    <span class="versie">02032016-2345-commit5 placeholders nederlands gemaakt, versie beheer in app gezet.<span>
                 </form>
             </ion-content>
         </ion-modal-view>
