span is een div met een p geworden, tekst is zwart gecentreerd gemaakt

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </ul>
                         <button type="submit" class="button button-block button-positive">Maak taak</button>
                     </div>
-                    <span class="versie">02032016-2345-commit5 placeholders nederlands gemaakt, versie beheer in app gezet.<span>
+                    <div> <p class="versie">02032016-2352-commit6 tekst zwart en gecentreerd.</p><div>
                 </form>
             </ion-content>
         </ion-modal-view>
