Added link to GitHub

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
                         </ul>
                         <button type="submit" class="button button-block button-positive">Maak taak</button>
                     </div>
-                    <div> <p class="versie">02032016-2352-commit6 tekst zwart en gecentreerd.</p><div>
+                    <div> <p class="versie">03032016 >> GitHub pages site gemaakt </p><div>
                 </form>
+                <div> <p class="versie"><a href="http://ronkats.github.io/kats-todo">Kats-TODO on GitHub</a></p></div>
             </ion-content>
         </ion-modal-view>
     </script>
