--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="cordova.js"></script>
     <!-- your app's js -->
     <script src="js/app.min.js"></script>
+    <script src="js/db.min.js"></script>
 </head>
 
 <body ng-app="kats-todo" ng-controller="main" ng-init="getTasks()">
