--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <script src="lib/angular-local-storage/dist/angular-local-storage.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- cordova script (this will be a 404 during development)
+    <script src="cordova.js"></script> -->
     <!-- your app's js -->
-    <script src="js/app.min.js"></script>
-    <script src="js/db.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/db.js"></script>
 </head>
 
-<body ng-app="kats-todo" ng-controller="main" ng-init="getTasks()">
+<body ng-app="kats-todo" ng-controller="main" ng-init="getTasks()" >
 
-    <ion-pane>
+    <ion-pane class="background">
         <ion-header-bar class="bar-dark">
             <h1 class="title">Kats-Todo</h1>
             <!-- New Task button-->
