--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
-    <!-- ionic/angularjs js -->
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development)
-    <script src="cordova.js"></script> -->
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/db.js"></script>
+    <script src="js/npm.js"></script>
 </head>
 
 <body ng-app="kats-todo" ng-controller="main" ng-init="getTasks()" >
